# fastmd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
Docs/: Layer_1_Blueprint.md  Manual_Test_Plan.md  Release_Notes_v0.0.6.md  Release_Notes_v0.0.7.md  Stage2_Blueprint.md  Support_Matrix.md  todos_20260403.md  todos_20260405.md  todos_20260406.md  todos_20260407.md  todos_20260408.md  todos_20260409.md
Docs/Screenshots/: README.md
Docs/Test_Logs/: README.md  manual-smoke-20260403-174737.md  manual-smoke-20260403-180204.md  validation-20260403-174800.md  validation-20260403-180228.md
FastMD.xcodeproj/: project.pbxproj
Scripts/: capture_finder_ax_snapshot.swift  generate_xcodeproj.rb  run_local_checks.sh  run_manual_smoke.sh
Sources/FastMD/: AppDelegate.swift  FinderHoverCoordinator.swift  FinderItemResolver.swift  MarkdownRenderer.swift  PreviewPanelController.swift
Tests/FastMDTests/: FastMDTests.swift
Tests/Fixtures/FinderAX/: README.md  test.json
apps/desktop-tauri/: README.md  package-lock.json  package.json
apps/macos/: README.md
crates/fastmd-platform-linux-nautilus/: Cargo.toml  README.md
crates/fastmd-platform-macos/: Cargo.toml  README.md
crates/fastmd-platform-windows/: Cargo.toml  README.md  VALIDATION.md
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: app.test.ts  app.ts  bridge.test.ts  bridge.ts  constants.ts  fixtures.ts  main.ts  markdown.ts  shims.d.ts  styles.css  types.ts
(+56 files in other folders)
